2003-09-23  David S. Miller  <davem@redhat.com>

	* config/sparc/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Undefine
	before redefining.
	* config/sparc/linux64.h (LINK_GCC_C_SEQUENCE_SPEC): Likewise.

2003-09-06  Steven Bosscher  <steven@gcc.gnu.org>

	PR c/9862
	* c-decl.c (c_expand_body_1): Move return warning from here...
	(finish_function): ...to here.

2003-09-16  Jason Merrill  <jason@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* c-common.c: Include input.h.
	(handle_warn_unused_result_attribute): New function.
	(c_format_attribute_table): Add warn_unused_result.
	(c_expand_expr): Issue warning when result of inlined function
	with warn_unused_result attribute is ignored.
	* calls.c (expand_call): Issue warning when result of function
	with warn_unused_result attribute is ignored.
	* c-common.h (STMT_EXPR_WARN_UNUSED_RESULT): Define.
	* expr.c: Include input.h.
	(expr_wfl_stack): Define.
	(expand_expr) <case EXPR_WITH_FILE_LOCATION>: If ignore,
	pass const0_rtx as target.  Chain locations into expr_wfl_stack.
	* tree-inline.c (expand_call_inline): Set STMT_EXPR_WARN_UNUSED_RESULT
	bit if inlined function has warn_unused_result attribute.
	* input.h (expr_wfl_stack): Declare.
	* doc/extend.texi: Document warn_unused_result attribute.
	* Makefile.in (expr.o, c-common.o): Depend on input.h.

2003-09-11  Jakub Jelinek  <jakub@redhat.com>

	* toplev.c (stack_limit_reg, stack_limit_symbol): New.
	(decode_f_option): Don't set stack_limit_rtx here, set
	stack_limit_{reg,symbol} instead.
	(lang_independent_init): Set stack_limit_rtx here.

2003-09-16  Jakub Jelinek  <jakub@redhat.com>

	* config/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
	* config/alpha/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
	* config/arm/linux-elf.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
	* config/m68k/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
	* config/rs6000/linux.h (LINK_GCC_C_SEQUENCE_SPEC): Define.
	* config/rs6000/linux64.h (LINK_GCC_C_SEQUENCE_SPEC): Define.