@@ -1,3 +1,7 @@
+2003-10-06  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20031006-1.c: New test.
+
 2003-09-06  Steven Bosscher  <steven@gcc.gnu.org>
 
 	PR c/9862
